# metavisor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  VECTOR_SEARCH_DESIGN.md  lancedb-search-design.md
metavisor-core/: Cargo.toml
metavisor-core/src/: error.rs  lib.rs  store.rs
metavisor-core/src/entity/: classification.rs  common.rs  entity.rs  header.rs  instance.rs  mod.rs  reference.rs
metavisor-core/src/graph/: mod.rs  traits.rs  types.rs
metavisor-core/src/relationship/: header.rs  instance.rs  mod.rs
metavisor-core/src/types/: business_metadata_def.rs  classification_def.rs  common.rs  data_type.rs  entity_def.rs  enum_def.rs  mod.rs  relationship_def.rs  struct_def.rs  types_def.rs
metavisor-server/: Cargo.toml
metavisor-server/src/: error.rs  lib.rs  mcp.rs  routes.rs
metavisor-server/src/handlers/: admin.rs  classification.rs  entity.rs  lineage.rs  mod.rs  relationship.rs  search.rs  type.rs
metavisor-server/tests/: entity_api_integration.rs  lineage_api_integration.rs  mcp_test.rs  relationship_api_integration.rs  type_api_integration.rs
metavisor-storage/: Cargo.toml
metavisor-storage/src/: consistency.rs  entity_store.rs  error.rs  grafeo_graph_store.rs  graph_store.rs  index.rs  kv.rs  lib.rs  metavisor_store.rs  relationship_store.rs  transaction.rs  type_store.rs  wal.rs
tests/: README.md  pyproject.toml  run_perf_test.py  run_test_data.py  test_type_crud.sh
tests/data/: column_meta_entity_1.json  column_meta_entity_2.json  column_meta_type.json  join_relationship_1.json  join_relationship_2.json  query.json  relationship_type.json  sql_column_relationship_1.json  sql_column_relationship_2.json  sql_meta_entity_1.json  sql_meta_entity_lineage.json  sql_meta_type.json
