[workspace]
members = [
    "metavisor-core",
    "metavisor-storage",
    "metavisor-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# UUID for entity IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"

# Internal crates
metavisor-core = { path = "metavisor-core" }
metavisor-storage = { path = "metavisor-storage" }
metavisor-server = { path = "metavisor-server" }
metavisor-mq = { path = "metavisor-mq" }
