[package]
name = "metavisor-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "metavisor"
path = "src/bin/metavisor.rs"

[[bin]]
name = "metavisor-mcp"
path = "src/bin/metavisor-mcp.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
metavisor-core.workspace = true
metavisor-storage.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio-util = { version = "0.7", features = ["io"] }
schemars = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
